--- a/src/index.css
+++ b/src/index.css
@@ -1,18 +1,86 @@
-body {
-  margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
-  background-color: #5f9cc5;
+@import url('https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100;0,200;0,400;0,700;1,100;1,400&display=swap');
+
+:root{
+  --primary-color: #14ECE5;
+  --primary-color-down: #13c7c1;
+  --primary-color-hover: #7bf0ec;
+  --secondary-color: #9f92f6;
+  --card--primary-color:#23344d;
+  --card--hover-color:#425066;
 }
 
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
+body {
+  margin: 0;
+  font-family: 'Montserrat', sans-serif;
+  -webkit-font-smoothing: antialiased;
+  -moz-osx-font-smoothing: grayscale;
+  background-color: #0F1724;
+  color: white;
 }
 
 .NavBar__navBarBrand__hover:hover {
-  filter:brightness(1.2)
+  filter: brightness(1.2);
+}
+
+.spinnerLoader__container{
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  min-height: 90vh;
+  margin: 0;
+  padding: 0;
+}
+
+.projectListItem__card {
+  background-color: var(--card--primary-color);
+  -webkit-box-shadow: 0 1px 2px 0 rgb(60 64 67 / 30%),
+  0 1px 3px 1px rgb(60 64 67 / 15%);
+  box-shadow: 0 1px 2px 0 rgb(60 64 67 / 30%), 0 1px 3px 1px rgb(60 64 67 / 15%);
+  color: var(--primary-color);
+  transition: all 50ms ease-in-out;
+  cursor: pointer;
+}
+
+.projectListItem__card:hover{
+  background-color:var(--card--hover-color);
+}
+
+
+.addProjectButton{
+  position:fixed;
+  width:40px;
+  height:40px;
+  bottom:20px;
+  right:20px;
+  background-color:var( --primary-color-down);
+  color:#FFF;
+  border-radius:50px;
+  text-align:center;
+  font-size:20px;
+  box-shadow: 2px 1px 30px var(--secondary-color);
+  z-index:100;
+  transition: all 50ms ease-in-out;
+}
+
+.addProjectButton__icon{
+  margin-top: 8px;
+}
+
+.addProjectButton:hover{
+  /* background-color:var(--primary-color-hover); */
+  /* color: #9b9b9b; */
+  transform: scale(1.1);
+}
+
+@media only screen and (min-width: 768px) {
+  .addProjectButton{
+    width:60px;
+    height:60px;
+    bottom:40px;
+    right:40px;
+    font-size: 25px;
+  }
+  .addProjectButton__icon{
+    margin-top: 10px;
+  }
 }
