--- a/src/index.css
+++ b/src/index.css
@@ -5,7 +5,7 @@
   --primary-color-down: #13c7c1;
   --primary-color-hover: #7bf0ec;
   --secondary-color: #9f92f6;
-  --card--primary-color:#23344d;
+  --card--primary-color:#41597c;
   --card--hover-color:#425066;
 }
 
@@ -35,7 +35,7 @@ body {
   background-color: var(--card--primary-color);
   -webkit-box-shadow: 0 1px 2px 0 rgb(60 64 67 / 30%),
   0 1px 3px 1px rgb(60 64 67 / 15%);
-  box-shadow: 0 1px 2px 0 rgb(60 64 67 / 30%), 0 1px 3px 1px rgb(60 64 67 / 15%);
+  box-shadow: 0 1px 2px 0 var(--secondary-color), 0 1px 3px 1px var(--secondary-color);
   color: var(--primary-color);
   transition: all 50ms ease-in-out;
   cursor: pointer;
@@ -57,7 +57,7 @@ body {
   border-radius:50px;
   text-align:center;
   font-size:20px;
-  box-shadow: 2px 1px 30px var(--secondary-color);
+  box-shadow: 2px 1px 8px var(--secondary-color);
   z-index:100;
   transition: all 50ms ease-in-out;
 }
