--- a/src/index.css
+++ b/src/index.css
@@ -1,7 +1,7 @@
 @import url('https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100;0,200;0,400;0,700;1,100;1,400&display=swap');
 
 :root{
-  --primary-color: #61DAFB;
+  --primary-color: #11ECE5;
   --primary-color-down: #13c7c1;
   --primary-color-hover: #7bf0ec;
   --secondary-color: #a47dff;
@@ -9,6 +9,9 @@
   --card--primary-color:#2B3566;
   --card--hover-color:#50306e;
   --boxShadow--boder-color: #000000;
+  --success-color: #5AE277;
+  --error-color: #E71A27;
+  --disabled-color:#92ABCF;
 }
 
 body {
@@ -28,6 +31,15 @@ body {
   color: var(--secondary-color);
 }
 
+.successFontColor{
+  color: var(--success-color);
+}
+
+.errorFontColor{
+  color: var(--error-color);
+  
+}
+
 .NavBar__navBarBrand{
   margin: 0;
 }
@@ -35,7 +47,7 @@ body {
 .NavBar__navBarBrand:hover {
   filter: brightness(1.2);
 }
-
+/*-----Spinner Loader*/
 .spinnerLoader__container{
   display: flex;
   justify-content: center;
@@ -53,11 +65,12 @@ body {
     360deg
     ) scale(.9);}
 }
+
 .spinnerLoader__rotate{
     animation: spinerRotate 1s infinite;
 }
-
-
+/*-----*/
+/*----- PROJECT CARDS*/
 .projectListItem__card {
   background-color: var(--card--primary-color);
   -webkit-box-shadow: 0 1px 2px 0 rgb(60 64 67 / 30%),
@@ -78,27 +91,26 @@ body {
 
 .addProjectButton{
   position:fixed;
-  width:40px;
-  height:40px;
+  width:50px;
+  height:50px;
   bottom:20px;
   right:20px;
   background-color:var( --primary-color-down);
   color:#FFF;
   border-radius:50px;
   text-align:center;
-  font-size:20px;
+  font-size:25px;
   box-shadow: 2px 1px 8px var(--secondary-color);
   z-index:100;
   transition: all 50ms ease-in-out;
 }
 
 .addProjectButton__icon{
-  margin-top: 10px;
+  margin-top: 12px;
 }
 
 .addProjectButton:hover{
-  /* background-color:var(--primary-color-hover); */
-  /* color: #9b9b9b; */
+  color:#FFF;
   transform: scale(1.1);
 }
 
@@ -115,14 +127,33 @@ body {
   }
 }
 
-.userProfileCard__container{
-  border-radius: 15px;
+/*------USERPROFILE ----------*/
+.userProfileCard__headerContainer{
   background-color: var(--card--primary-color);
+  border-radius: 15px;
 }
 
 .userProfileCard__image{
   width: 100px;
   border-radius:50px;
+}
+
+.userProfileCard__userName{
+  font-weight: 800;
+  font-size: larger;
+  letter-spacing: 0px;
+}
+
+.userProfileCard__userEmail{
+  color: var(--disabled-color);
+}
+.userProfileCard__projectsContainer{
+  background-color: #0F1724;
+}
+
+.userProfileCard__projectsNumbers{
+  font-size: 20px;
+  font-weight: bold;
 }
 
 .currency {
