--- a/src/index.css
+++ b/src/index.css
@@ -1,4 +1,5 @@
-@import url('https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100;0,200;0,400;0,700;1,100;1,400&display=swap');
+/* @import url('https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100;0,200;0,400;0,700;1,100;1,400&display=swap');*/
+@import url('https://fonts.googleapis.com/css2?family=Nunito:ital,wght@0,200;0,400;0,700;1,400;1,700&display=swap');
 
 :root{
   --primary-color: #11ECE5;
@@ -16,7 +17,8 @@
 
 body {
   margin: 0;
-  font-family: 'Montserrat', sans-serif;
+  /* font-family: 'Montserrat', sans-serif; */
+  font-family: 'Nunito', sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
   background-color: #0E1431;
@@ -178,7 +180,7 @@ a:hover {
 
 .sidebar-container .menu {
   padding-top: 1rem;
-  width: 12rem;
+  width: 15rem;
 }
 
 .sidebar-container .menu button{
