add save tasks to database begin on validations

--- a/src/index.css
+++ b/src/index.css
@@ -246,3 +246,9 @@ label:focus,
       border: 0;
   }
 }
+
+.stopwatch__display{
+  font-size: 1.3rem;
+  margin-bottom: 1rem;
+  margin-top: 1rem;
+}
