--- a/src/index.css
+++ b/src/index.css
@@ -256,6 +256,38 @@ label:focus,
   }
 }
 
+/*Project Report Styles*/
+.reportButton{
+  background-color:var(--button--hover-color);
+  border: 1px solid transparent;
+  box-shadow: 1px 1px 8px var(--primary-color);
+  color:#FFF;
+  position:fixed;
+  width:50px;
+  height:50px;
+  bottom:20px;
+  right:20px;
+  border-radius:50px;
+  font-size:25px;
+  text-align:center;
+  padding: .375rem .75rem;
+  transition: all 50ms ease-in-out;
+  z-index:100;
+}
+
+.reportButton:hover{
+  color:#FFF;
+  transform: scale(1.1);
+}
+
+
+
+
+
+
+
+
+
 /*-----------------Time Task Styles-----------------*/
 
 
