--- a/src/index.css
+++ b/src/index.css
@@ -316,6 +316,15 @@ label:focus,
 
 .report__ProjectSection{
   background-color: #3E444A;
+  padding: 0 0.5rem;
+  width: 95%;
+  margin: 0 auto;
+  /* border: 1px dotted var(--button--hover-color); */
+  border-radius: 8px;
+  -webkit-box-shadow: 0 1px 2px 0 rgb(60 64 67 / 30%),
+    0 1px 1px 1px rgb(60 64 67 / 15%);
+  box-shadow: 0 1px 4px 0 var(--boxShadow--boder-color),
+    0 1px 4px 1px var(--boxShadow--boder-color);
 }
 
 .report__checkboxInput:hover, .report__checkboxInput:checked{
