--- a/src/index.css
+++ b/src/index.css
@@ -291,7 +291,7 @@ label:focus,
 
 
 
-.reportButton {
+.reportButton__PDF {
   background-color: var(--button--hover-color);
   border: 1px solid transparent;
   box-shadow: 1px 1px 8px var(--primary-color);
@@ -300,7 +300,7 @@ label:focus,
   width: 50px;
   height: 50px;
   bottom: 20px;
-  right: 20px;
+  right: 30px;
   border-radius: 50px;
   font-size: 25px;
   text-align: center;
@@ -309,10 +309,35 @@ label:focus,
   z-index: 100;
 }
 
-.reportButton:hover {
+.reportButton__PDF:hover {
   color: #fff;
   transform: scale(1.1);
 }
+
+.reportButton__finishProject{
+  background-color: var(--success-color);
+  border: 1px solid transparent;
+  box-shadow: 1px 1px 8px var(--button--hover-color);
+  color: #fff;
+  position: fixed;
+  width: 50px;
+  height: 50px;
+  bottom: 100px;
+  right: 30px;
+  border-radius: 50px;
+  font-size: 25px;
+  text-align: center;
+  padding: 0.375rem 0.75rem;
+  transition: all 50ms ease-in-out;
+  z-index: 100;
+}
+
+.reportButton__finishProject:hover {
+  color: #fff;
+  transform: scale(1.1);
+}
+
+
 
 .report__ProjectSection{
   background-color: #3E444A;
