--- a/src/index.css
+++ b/src/index.css
@@ -473,9 +473,11 @@ tr:nth-child(even) td {
 }
 
 .userProfileCard__image {
-  width: 100px;
-  border-radius: 50px;
+  width: 100%;
+  height: 115px;
+  border-radius: 100px;
   border: 7px double var(--primary-color);
+  object-fit: cover;
 }
 
 .userProfileCard__userName {
